<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@color/lightblue"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_local_dining"
            android:layout_weight="1"
            android:contentDescription="@string/icon"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/white"
            android:fontFamily="casual"
            android:text="@string/order_app"
            android:layout_weight="2"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_shopping_cart"
            android:layout_weight="1"
            android:id="@+id/cart"
            app:tint="@color/white"
            android:contentDescription="@string/icon"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:background="@drawable/border"
            android:id="@+id/makanan">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic__food_bank"
                android:padding="20dp"
                android:background="@drawable/round"
                android:contentDescription="@string/icon"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/makanan"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/list_berbagai_makanan"
                    android:layout_weight="2"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:background="@drawable/border"
            android:id="@+id/minuman">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_local_drink"
                android:padding="20dp"
                android:background="@drawable/round"
                android:contentDescription="@string/icon"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minuman"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/list_berbagai_minuman"
                    android:layout_weight="2"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>